--- a/twitter/index.html
+++ b/twitter/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://twitter.com/thetimcook</title>
-<meta http-equiv="refresh" content="0; URL=hhttps://twitter.com/thetimcook">
+<meta http-equiv="refresh" content="0; URL=https://twitter.com/thetimcook">
 <link rel="canonical" href="https://twitter.com/thetimcook">
