--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="thetimcook">
     <meta property="og:description" content="My name is Tim Cook
-I'm a UI &amp; UX Designer at Parler [https://parler.com/timcook] and all
-around web creative from Springfield, MO. I have a beautiful wife and two (not
-always) wonderful children. I love to build things and take photos of stuff.
+I'm the Product Designer at Rumble [https://rumble.com/user/thetimcook] and all
+around web creative from Springfield, MO. I have a beautiful wife, three (not
+always) wonderful children, chickens and a couple squirrels [https://twitter.com/thetimcook/status/1780628588124938745]. I love to build things and take photos of stuff.
 [https://www.instagram.com/thetimcook/]
 
 Sometimes I have time to work on side projects, so if you want to get in touch
