--- a/testing/index.html
+++ b/testing/index.html
@@ -5,6 +5,7 @@
     <style>
         body, html {
             background-color: rgba(0,0,0,0);
+            color: white;
         }
     </style>
 </head>
