--- a/testing/index.html
+++ b/testing/index.html
@@ -4,8 +4,10 @@
 <head>
     <style>
         body, html {
-            background-color: rgba(0,0,0,0);
             color: white;
+        },
+        h1, p {
+            color: white:
         }
     </style>
 </head>
