--- a/testing/index.html
+++ b/testing/index.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body, html {
-            color: white;
+            background-color: Canvas;
         },
         h1, p {
             color: white:
