--- a/testing/index.html
+++ b/testing/index.html
@@ -7,7 +7,7 @@
             background-color: ActiveText;
         },
         h1, p {
-            color: white:
+            color: white;
         }
     </style>
 </head>
