--- a/testing/index.html
+++ b/testing/index.html
@@ -4,8 +4,8 @@
 <head>
     <style>
         body, html {
-            background-color: ActiveText;
-        },
+            background-color: Canvas;
+        }
         h1, p {
             color: white;
         }
