--- a/testing/index.html
+++ b/testing/index.html
@@ -4,7 +4,8 @@
 <head>
     <style>
         body, html {
-            background-color: Canvas;
+            background-color: back;
+            background-color: rgba(0,0,0,0);
         }
         h1, p {
             color: white;
