--- a/testing/index.html
+++ b/testing/index.html
@@ -4,7 +4,7 @@
 <head>
     <style>
         body, html {
-            background-color: back;
+            background-color: black;
             background-color: rgba(0,0,0,0);
         }
         h1, p {
